i believe i fixed hanging issue at the end of hand

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -12,5 +12,7 @@
 @import "./bidding_modal.scss";
 @import "./error_modal.scss";
 @import "./spadescore_modal.scss";
+@import "./playagain_modal.scss";
+@import "./gameover_modal.scss";
     
 
