--- a/app/styles/spadeplayer_seat.scss
+++ b/app/styles/spadeplayer_seat.scss
@@ -204,3 +204,19 @@
     top:50%;
     position: absolute;
 }
+
+
+.showBotView{
+    border: 1px solid black;
+    top: 140%;
+    left:45%;
+    width:30%;
+    text-align: center;
+    background-color: red;
+    position: absolute;
+}
+
+.playingCardSizeBorder{
+
+    border: 6px dashed yellow;
+}
