--- a/app/styles/spadescore_modal.scss
+++ b/app/styles/spadescore_modal.scss
@@ -10,6 +10,14 @@
     position:absolute;
     border-radius:20px;
 }
+.spadeTeamWhoWon{
+
+    height: 50%;
+    width: 50%;
+    position:absolute;
+    background-color: gold;
+    color: darkblue;
+}
 .spadeScoreInfoLabel{
 
     width: 50%;
