--- a/app/templates/greggames/cards/spades/games/game/players/player.hbs
+++ b/app/templates/greggames/cards/spades/games/game/players/player.hbs
@@ -3,25 +3,25 @@
 
 
 <div class="container playerSeatNorth">
-    {{spadeplayer-seat player=model.seats.playerNorth playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
+    {{spadeplayer-seat player=model.seats.playerNorth playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
 
 </div>
 
 <div class="container playerSeatWest">
-    {{spadeplayer-seat player=model.seats.playerWest playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
+    {{spadeplayer-seat player=model.seats.playerWest playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
 
 
 </div>
 
 <div class="container playerSeatEast">
-    {{spadeplayer-seat player=model.seats.playerEast playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
+    {{spadeplayer-seat player=model.seats.playerEast playerView=model.playerView previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
 
 
 </div>
 
 <div class="container playerSeatSouth">
-    {{spadeplayer-seat player=model.seats.playerSouth playerView=model.playerView currTurn=model.currTurn playerCard="playerCard" gameView=model previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver}}
-    {{bidding-modal playerBid="playerBid" gameView=model}}
+    {{spadeplayer-seat createPlayerView="createPlayerView" player=model.seats.playerSouth playerView=model.playerView currTurn=model.currTurn playerCard="playerCard" gameView=model previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
+    {{bidding-modal playerBid="playerBid" gameView=model player=model.seats.playerSouth}}
     {{#if model.seats.playerSouth.error}}
 
     <div class="container">{{error-modal player=model.seats.playerSouth closeErrorModal="closeErrorModal"}}</div>
