--- a/app/styles/spadeplayer_seat.scss
+++ b/app/styles/spadeplayer_seat.scss
@@ -138,7 +138,7 @@
 .playCardDiv{
     position: absolute;
     left: 44%;
-    border: 1px solid black;
+   // border: 1px solid black;
     height: 95%;
     width: 25%;
     bottom: 150%;
