--- a/app/templates/components/spades-homepage.hbs
+++ b/app/templates/components/spades-homepage.hbs
@@ -1,5 +1,6 @@
 <div class="container">
 
-    <button class="spadeButton" {{action "spadeGames"}}>View Games</button>
+
+    <div class="spadeButtonDiv"><button class="spadeButton" {{action "spadeGames"}}>View Games</button></div>
 
 </div>
