--- a/app/templates/greggames/cards/spades.hbs
+++ b/app/templates/greggames/cards/spades.hbs
@@ -1,7 +1,9 @@
 <div class="container" id="spadeHomeCont">
 
-    <div class="container" id="spadePanel">Spades</div>
-    {{#link-to "greggames.cards.spades.games"}} View Games{{/link-to}}
+    <div class="container" id="spadePanel"><p>Spades</p> 
+       </div>
+        <div class="viewGamesDiv">{{#link-to "greggames.cards.spades.games"}} View Games{{/link-to}}</div>
+    
     {{outlet}}
 
 </div>
