--- a/app/styles/spadegame_list.scss
+++ b/app/styles/spadegame_list.scss
@@ -1,8 +1,15 @@
 .gameSection{
 
-    background-color: black;
-    border: 10px dotted red;
+    background-color: blue;
     color: lightblue;
+    border-radius: 50%;
+    height: 300px;
+    width: 50%;
+    position: relative;
+   
+    top:15%;
+    left:25%;
+    
 }
 
 #spadeListButton{
@@ -17,4 +24,60 @@
     width: 200px;
     color: black;
     background-color: red;
+    text-align: center;
+}
+
+.gameSectionTable{
+
+    border:1px solid black;
+    text-align: center;
+    top:15%;
+    position: absolute;
+    left: 30%;
+}
+.occupiedSeatInd{
+
+    border:1px solid black;
+    width: 15%;
+    height: 5%;
+    position: absolute;
+}
+.occupiedSeatNorth{
+
+   left:42.5%;
+   top:7%;
+   text-align: center;
+   position: absolute;
+}
+.occupiedSeatSouth{
+
+    left:42.5%;
+    bottom:17%;
+    text-align: center;
+    position: absolute;
+ }
+ .occupiedSeatEast{
+
+    left:8%;
+    top:38%;
+    text-align: center;
+    position: absolute;
+ }
+ .occupiedSeatWest{
+
+    right:8%;
+    top:38%;
+    text-align: center;
+    position: absolute;
+ }
+.gameSectionInfo{
+    border: 1px solid black;
+    height: 500px;
+    width:90%;
+    position: relative;
+    background-color: aqua;
+
+}
+.occupiedColor{
+    background-color: yellow;
 }
