--- a/app/styles/spadegame_home.scss
+++ b/app/styles/spadegame_home.scss
@@ -2,7 +2,7 @@
 
     height: 300px;
     width: 300px;
-   color: yellow;
+  
     margin-top: 5%;
     border: 1px solid black;
     margin-left: 15%;
@@ -11,7 +11,7 @@
 }
 
 .spadeButtonDiv{
-    border: 1px solid black;
+    // border: 1px solid black;
     color: red;
 }
 
