leaving game code added

--- a/app/styles/greggames_header.scss
+++ b/app/styles/greggames_header.scss
@@ -27,14 +27,14 @@
     
 body{
         
-                // background-color:rgba(119, 219, 206, 0.945);
-                background: repeating-linear-gradient(
-  90deg,
-  #606dbc,
-  #f5f7f3 10px,
-  #f6f7f4 10px,
-  #000103 20px
-);
+                background-color:lightblue;
+//                 background: repeating-linear-gradient(
+//   90deg,
+//   #606dbc,
+//   #f5f7f3 10px,
+//   #f6f7f4 10px,
+//   #000103 20px
+// );
         }
     
 #ggBody{
