--- a/app/styles/spadeplayer_seat.scss
+++ b/app/styles/spadeplayer_seat.scss
@@ -220,3 +220,14 @@
 
     border: 6px dashed yellow;
 }
+
+.leaveGame{
+    border: 1px solid black;
+    top: 140%;
+    width: 20%;
+    background-color: rgb(8, 8, 131);
+    color: white;
+    text-align: center;
+    left: 50%;
+    position: absolute;
+}
