--- a/app/templates/components/spadeplayer-seat.hbs
+++ b/app/templates/components/spadeplayer-seat.hbs
@@ -3,7 +3,7 @@
 {{#if isShowPlayerCards}}
 
 {{!-- <img {{action "playerCard" card}} src={{image-src "/assets/images/cards/" card.name ".jpeg"}} id={{id-formatter player.name index}} class="cardSize cardDetails">  --}}
-{{card-generator card=card cardName=card.name index=index playerCard="playerCard"}}
+{{card-generator card=card cardName=card.name index=index playerCard="playerCard" allowClick=allowClick}}
 {{else}}
 {{card-generator cardName="BACK_CARD" index=index}} 
 {{/if}}
