kind of fix leaving game

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -14,5 +14,6 @@
 @import "./spadescore_modal.scss";
 @import "./playagain_modal.scss";
 @import "./gameover_modal.scss";
+@import "./countdown_timer.scss";
     
 
