added timer still leaving game is not working

--- a/app/templates/components/spadeplayer-seat.hbs
+++ b/app/templates/components/spadeplayer-seat.hbs
@@ -31,11 +31,11 @@
 <div class="circleBase playerTurn"><p class="container playerAction">{{playerAction}}</p></div>
 {{/if}}
 
-{{!-- {{#unless isGameView}}
+{{#unless isGameView}}
 {{#if player.turn}}
 {{countdown-timer currentTime=maxTime}}
 {{/if}}
-{{/unless}} --}}
+{{/unless}}
 <div class="playCardDiv container">
     
     
