will see if timing works looks as if library is doing it for me. timing is long though

--- a/app/templates/components/spadegame-list.hbs
+++ b/app/templates/components/spadegame-list.hbs
@@ -11,7 +11,7 @@
 
     <article>
 
-        {{#each gameState.games as |game|}}
+        {{#each gameState.spadeGames as |game|}}
 
         <div class="container gameSectionInfo">
 
