--- a/app/templates/greggames/cards/spades/games/index.hbs
+++ b/app/templates/greggames/cards/spades/games/index.hbs
@@ -1,1 +1,1 @@
-{{spadegame-list gameState=model playGame="playGame" createNewGame="createNewGame"}}
+{{spadegame-list playGame="playGame" createNewGame="createNewGame"}}
