--- a/app/templates/components/spadegame-list.hbs
+++ b/app/templates/components/spadegame-list.hbs
@@ -11,7 +11,7 @@
 
     <article>
 
-        {{#each gameState.spadeGames as |game|}}
+        {{#each gameView.spadeGames as |game|}}
 
         <div class="container gameSectionInfo">
 
