--- a/app/templates/greggames/cards/spades/games/game/index.hbs
+++ b/app/templates/greggames/cards/spades/games/game/index.hbs
@@ -1,23 +1,23 @@
 {{!-- <div class="container spadeGameTable"> --}}
 
- {{#spadegame-table gameView=model renderGameView="renderGameView" pingSocket=pingSocket}}   
-   {{spadegame-button gameView=model startGame="startGame"}}
-    <div class="container playerSeatNorth">
-        {{spadeplayer-seat player=model.teams.TEAM1.players.PLAYER3 createPlayerView="createPlayerView" classButton="playerButtonNorth" previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}   
-    </div>
+ {{#spadegame-table renderGameView="renderGameView" pingSocket=pingSocket startGame="startGame" createPlayerView="createPlayerView" isGameView=true}}   
+   {{!-- {{spadegame-button startGame="startGame"}} --}}
+    {{!-- <div class="container playerSeatNorth">
+        <SpadePlayer-Seat position="PLAYERNORTH" createPlayerView="createPlayerView" classButton="playerButtonNorth" isGameView=true @gameView={{gameView}} />  
+    </div> --}}
 
-    <div class="container playerSeatWest">
-        {{spadeplayer-seat player=model.teams.TEAM2.players.PLAYER2 createPlayerView="createPlayerView" classButton="playerButtonWest" previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
-    </div>
+    {{!-- <div class="container playerSeatWest">
+        <SpadePlayer-Seat position="PLAYERWEST" createPlayerView="createPlayerView" classButton="playerButtonWest" isGameView=true gameView={{gameView}} />
+    </div> --}}
 
-    <div class="container playerSeatEast">
-        {{spadeplayer-seat player=model.teams.TEAM2.players.PLAYER4 createPlayerView="createPlayerView" classButton="playerButtonEast" previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
+    {{!-- <div class="container playerSeatEast">
+        {{spadeplayer-seat position="PLAYEREAST" createPlayerView="createPlayerView" classButton="playerButtonEast" isGameView=true gameView=gameView}}
     
     </div>
 
     <div class="container playerSeatSouth">
-        {{spadeplayer-seat player=model.teams.TEAM1.players.PLAYER1 createPlayerView="createPlayerView" classButton="playerButtonSouth" previousTrick=model.previousTrick previousHand=model.previousHand gameNotification=model.gameNotification isTrickOver=model.trickOver isHandOver=model.handOver isGameOver=model.gameOver}}
-    </div>
+        {{spadeplayer-seat position="PLAYERSOUTH" createPlayerView="createPlayerView" classButton="playerButtonSouth" isGameView=true gameView=gameView}}
+    </div> --}}
 {{/spadegame-table}}
 
 {{!-- </div> --}}
