fix spade broken will handle errors and game is over next

--- a/app/templates/components/spadescore-modal.hbs
+++ b/app/templates/components/spadescore-modal.hbs
@@ -1,5 +1,5 @@
 <div class="spadeScoreModal container">
-    <div>Round {{gameView.previousHand.handCount}} Information</div>
+    <div>Round {{gameView.handCount}} Information</div>
     <table class="spadeScoreTable">
         <tr>
             <td class="spadeScoreInfoLabel">&nbsp;</td>
