works basically i think. there is a buffer limit for sockets. need to find a fix

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,5 +15,6 @@
 @import "./playagain_modal.scss";
 @import "./gameover_modal.scss";
 @import "./countdown_timer.scss";
+@import "./spade_broken.scss";
     
 
