--- a/app/styles/error_modal.scss
+++ b/app/styles/error_modal.scss
@@ -3,7 +3,8 @@
     position: absolute;
     top: 50%;
     left: -20%;
-    background-color: rgb(241, 133, 10);
+    background-color:black;
+    border: 8px solid yellow;
     width: 30%;
     height: 50%;
     color: white;
