--- a/app/templates/components/error-modal.hbs
+++ b/app/templates/components/error-modal.hbs
@@ -2,9 +2,8 @@
 <div class="container errorModal">
 {{#each errors as |error|}}
 <div>{{error}}</div>
-
 {{/each}}
-<button {{action "closeErrorModal"}}>Close</button>
+{{!-- <button {{action "closeErrorModal"}}>Close</button> --}}
 </div>
 
 {{/if}}
