--- a/app/templates/components/spade-broken.hbs
+++ b/app/templates/components/spade-broken.hbs
@@ -1,6 +1,11 @@
-{{!-- {{#if isFirstSpade}} --}}
+{{#if isSpadeBroken}}
 
-<div class="spadeBroken">Spade Has Been Broken!!!!!!!!</div>
+<div class="spadeBroken">
+    Spade Broken!!!!!!!!</div>
+{{#if isFirstSpade}}
 
+{{!-- <div>First Spade</div> --}}
+{{/if}}
 
-{{!-- {{/if}} --}}
+{{/if}}
+
