--- a/app/templates/greggames/cards/spades/games/game/players/player.hbs
+++ b/app/templates/greggames/cards/spades/games/game/players/player.hbs
@@ -1,4 +1,4 @@
-{{#spadegame-table renderGameView="renderGameView" isGameView=false leaveGame="leaveGame" playerBid="playerBid" playerCard="playerCard"}}
+{{#spadegame-table renderGameView="renderGameView" isGameView=false leaveGame="leaveGame" playerBid="playerBid" playerCard="playerCard" createPlayerView="createPlayerView"}}
 
 
 
