--- a/app/styles/playagain_modal.scss
+++ b/app/styles/playagain_modal.scss
@@ -3,25 +3,23 @@
     border: 1px solid black;
     z-index: 27;
     background-color: whitesmoke;
-    height: 200%;
-    width: 100%;
-    left: 12%;
-    top:-350%;
+    height: 40%;
+    width: 40%;
+    top: 25%;
     position:absolute;
     border-radius:20px;
 }
 
 .playAgainButton{
 
-    border: 1px solid black;
-
-    position: relative;
-    height: 30%;
-    width:50%;
-    color:white;
-    left: 30%;
+    position:absolute;
+    top: 45%;
+    left: 37%;
+    height: 20%;
+    width: 30%;
     background-color: blue;
-
+    color: red;
+    font-size: 200%;
 }
 
 .playAgainButtonDiv{
