--- a/app/styles/spade_broken.scss
+++ b/app/styles/spade_broken.scss
@@ -1,4 +1,15 @@
 .spadeBroken{
 
-    border: 1px solid black;
+    border: 10px dashed black;
+    height: 10%;
+    width: 30%;
+    margin-top: 2%;
+    margin-left: 1%;
+    background-color: blue;
+    position:absolute;
+    color: whitesmoke;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90%;
+    font-size: 200%;
 }
