added hovering and fixed sorted. handling bot is next

--- a/app/styles/spadeplayer_seat.scss
+++ b/app/styles/spadeplayer_seat.scss
@@ -129,6 +129,12 @@
     height:95%;
     width:22%;
 }
+
+
+.cardHover:hover{
+    transform: scale(1.5);
+    border: 3px solid yellow;
+}
 .cardDetails{
 
     position:absolute;
