--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,5 +16,6 @@
 @import "./gameover_modal.scss";
 @import "./countdown_timer.scss";
 @import "./spade_broken.scss";
+@import "./message_modal.scss";
     
 
